// Интерфейс Observer
interface Observer {
    void update(String state);
}
